--- a/src/styles/Carousel.module.scss
+++ b/src/styles/Carousel.module.scss
@@ -75,7 +75,7 @@
 }
 
 .arrow {
-    position: fixed;
+    position: absolute;
     top: 40%;
     user-select: none;
     z-index: 10;
