--- a/src/styles/Hero.module.scss
+++ b/src/styles/Hero.module.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     justify-content: flex-start;
     padding-top: 2rem;
     align-items: center;
